Amvera forced concessions
Rough java 17 compatibility (Probably temporal ).
Temporal switch to single stream.
Useful /help and couple simular commands.
New commands.
Amvera hosting is alive.
Bug fixing and bug making.